Fix z-index

--- a/frontend/src/components/Header/style.scss
+++ b/frontend/src/components/Header/style.scss
@@ -6,7 +6,7 @@ ul {
     position: fixed;
     width: 100vw;
     background-color: white;
-    z-index: 100;
+    z-index: 10000;
 }
 
 .header-placeholder {
